--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+FASTMCP_LOG_LEVEL="INFO"
 FASTMCP_TRANSPORT="streamable-http"
 FASTMCP_AUTH__ISSUER_URL="http://127.0.0.1:9000"
 FASTMCP_AUTH__RESOURCE_SERVER_URL="http://127.0.0.1:8000/mcp"
