--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -22,6 +22,8 @@ spec:
               containerPort: 8000
               protocol: TCP
           env:
+            - name: FASTMCP_HOST
+              value: "0.0.0.0"
             - name: FASTMCP_LOG_LEVEL
               value: "INFO"
             - name: FASTMCP_TRANSPORT
