--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       id-token: write
     env:
       REGISTRY: europe-west1-docker.pkg.dev
-      REPOSITORY: stape-development/mcp-ga
+      REPOSITORY: stape-development/stape
       IMAGE: mcp-ga
     steps:
       - name: Checkout
