--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
       id-token: write
     env:
       REGISTRY: europe-west1-docker.pkg.dev
-      REPOSITORY: stape-production/mcp-ga
+      REPOSITORY: stape-production/stape
       IMAGE: mcp-ga
     steps:
       - name: Checkout
