--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -1,3 +1,6 @@
-host: "mcp-ga.stape.dev"
+domain: "stape.dev"
 image:
+  repository: "europe-west1-docker.pkg.dev/stape-development/stape"
+  name: "mcp-ga"
   tag: "latest"
+
