--- a/chart/templates/certificate.yaml
+++ b/chart/templates/certificate.yaml
@@ -8,5 +8,5 @@ spec:
   dnsNames:
     - mcp-ga.{{ .Values.domain }}
   issuerRef:
-    name: cloudflare
+    name: letsencrypt-prod
     kind: ClusterIssuer
